# ratan-600-data-analyzer

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.yml  pyproject.toml  release.py  requirements.txt
apps/bin2fits_fast_acquisition_1_3ghz/: main.py  observation_processor.py
apps/bin2fits_fast_acquisition_1_3ghz/logging/: error_tracker.py  logger_configurator.py  logging_settings.py
apps/bin2fits_fast_acquisition_1_3ghz/settings/: bin2fits_fast_acquisition_1_3ghz_settings.py  config.py  settings_loader.py
config/: bin2fits_fast_1_3_app.toml
configs/: bin2fits_fast_acq_1_3ghz_config.toml
examples/: observation_processor.py  read_fits.py
ratan_600_data_analyzer/: main.py
ratan_600_data_analyzer/common/: project_info.py
ratan_600_data_analyzer/fits/: fits_header_reader.py
ratan_600_data_analyzer/logger/: logger.py  logger_config.py
ratan_600_data_analyzer/observation/: observation_reader.py
ratan_600_data_analyzer/ratan/: channel_data.py  coordinate_axes.py  data_extractor.py  data_layout.py  data_receiver.py  fits_parameters_extractor.py  fits_table_parameters_extractor.py  ratan_builder_factory.py  ratan_observation.py  ratan_observation_builder.py  ratan_observation_calibrator.py  ratan_observation_data.py  ratan_observation_factory.py  ratan_observation_metadata.py  ratan_observation_writer.py
ratan_600_data_analyzer/ratan/sspc/: sspc_data.py  sspc_fits_reader.py  sspc_metadata.py  sspc_metadata_fits_loader.py  sspc_observation.py
ratan_600_data_analyzer/utils/: common_utils.py
src/apps/analyzer/: main.py
src/apps/bin2fits_fast_acquisition_1_3ghz/: bin2fits_fast_acquisition_1_3ghz_app.py  main.py  observation_processor.py  (+1 more)
(+76 files in other folders)
