[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratan-600-data-analyzer"
version = "0.3.5"
requires-python = ">= 3.9"
readme = "README.md"
description = ""
authors = [
  { name="Andrei Shendrik", email="andrei.shendrik@gmail.com" },
]

dependencies = [
    "astropy",
    "colorama",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "plotly",
    "sunpy"
    # "watchdog"
]

[project.optional-dependencies]
bin2fits_fast_acqusition_1_3ghz = []

[project.scripts]
bin_to_fits_fast_acqusition_1_3ghz = "apps.bin_to_fits_fast_acqusition_1_3ghz.main:main"

[tool.setuptools.package-data]
ratan_600_data_analyzer = [
    "ratan/fast_acquisition/fast_acquisition_1_3ghz/config/*.toml",
    "ratan/fast_acquisition/fast_acquisition_1_3ghz/data/*.dat"
]


